同步当前开发进度

--- a/手册/规则编辑方法.md
+++ b/手册/规则编辑方法.md
@@ -1,17 +1,24 @@
 # 量化策略规则编辑手册
 
-> 本手册适用于 `score_ui.py` 中的"策略测试器（单条规则）"和 `config.py` 中的 `SC_RULES` 配置。
+本手册适用于策略规则配置，包括：
+- `score_ui.py` 中的"策略测试器（单条规则）"
+- `strategies_repo.py` 中的策略规则列表（RANKING_RULES, FILTER_RULES等）
+- `config.py` 中的 `SC_RULES` 配置（如使用）
+- 规则编辑器和语法检查器工具
 
-## 📋 目录
+## 目录
 - [1. 快速开始](#1-快速开始)
 - [2. 字段详解](#2-字段详解)
 - [3. 命中口径 (scope)](#3-命中口径-scope)
 - [4. 多子句组合 (clauses)](#4-多子句组合-clauses)
 - [5. 表达式语法](#5-表达式语法)
-- [6. 前置门槛 (gate)](#6-前置门槛-gate)
+- [6. 前置门槛 (gate/trigger/require)](#6-前置门槛-gatetriggerrequire)
 - [7. 实用示例](#7-实用示例)
-- [8. 模拟策略](#8-模拟策略)
-- [9. 持仓策略](#9-持仓策略)
+- [8. 最佳实践](#8-最佳实践)
+- [9. 模拟策略](#9-模拟策略)
+- [10. 持仓策略](#10-持仓策略)
+- [11. 规则编辑器工具](#11-规则编辑器工具)
+- [12. 策略语法检查器](#12-策略语法检查器)
 
 ---
 
@@ -22,15 +29,18 @@
 ```json
 {
   "timeframe": "D",                // 可选，默认 "D"（日线）
-  "window": 60,                    // 可选，默认 SC_LOOKBACK_D（config 里默认 60）
-  "when": "C > MA(C, 20)",         // ✅ 必填：TDX 风格表达式
+  "score_windows": 60,             // 可选，默认 60（用于计分判断的历史数据条数）
+  "when": "C > MA(C, 20)",         // [必填] TDX 风格表达式（或用clauses替代）
   "scope": "ANY",                  // 可选，默认 "ANY"
   "points": 0,                     // 可选：命中加/减分（默认 0）
   "explain": "示例说明"             // 可选：规则说明文字
 }
 ```
 
-> 💡 **提示**：`when` 字段是必填的，其他字段都有合理的默认值。可以用 `clauses` 替代 `when` 来实现多子句组合。
+**提示**：
+- `when` 字段是必填的（除非使用 `clauses`），其他字段都有合理的默认值
+- 可以用 `clauses` 替代 `when` 来实现多子句组合
+- **[重要]** `window` 字段已废弃，请使用 `score_windows` 字段
 
 ---
 
@@ -40,23 +50,30 @@
 
 | 字段 | 类型 | 必填 | 说明 | 默认值 |
 |---|---|---|---|---|
-| `name` | str | ❌ | 规则名称，仅用于展示 | - |
-| `timeframe` | str | ❌ | 时间周期：`"D"`(日线) / `"W"`(周线) / `"M"`(月线) | `"D"` |
-| `window` | int | ❌ | 回看窗口条数 | `SC_LOOKBACK_D` (60) |
-| `when` | str | ✅ | 条件表达式（TDX风格） | - |
-| `scope` | str | ❌ | 命中口径 | `"ANY"` |
-| `points` | number | ❌ | 命中时加/减分 | `0` |
-| `explain` | str | ❌ | 规则说明文字 | - |
+| `name` | str | [可选] | 规则名称，仅用于展示 | - |
+| `timeframe` | str | [可选] | 时间周期：`"D"`(日线) / `"W"`(周线) / `"M"`(月线) / `"60MIN"`(60分钟) | `"D"` |
+| `score_windows` | int | [可选] | 计分窗口条数（用于计分判断的历史数据条数） | `60` |
+| `when` | str | [必填]* | 条件表达式（TDX风格），*使用clauses时可省略 | - |
+| `scope` | str | [可选] | 命中口径（支持 `COUNT>=k` 和 `CONSEC>=m` 格式） | `"ANY"` |
+| `points` | number | [可选] | 命中时加/减分 | `0` |
+| `explain` | str | [可选] | 规则说明文字 | - |
+
+**注意**：`window` 字段已废弃，请使用 `score_windows` 字段。`window` 字段仅用于向后兼容，系统会自动转换为 `score_windows`。
 
 ### 高级字段
 
 | 字段 | 类型 | 必填 | 说明 | 默认值 |
 |---|---|---|---|---|
-| `show_reason` | bool | ❌ | 是否纳入"理由"列表 | `true` |
-| `as` | str | ❌ | 分类标签：`"opportunity"`(机会) / `"highlight"`(高亮) / `"drawback"`(缺点) / `"auto"`(自动) | `"auto"` |
-| `gate` / `trigger` / `require` | str/dict/list | ❌ | 前置门槛条件 | - |
-| `clauses` | list | ❌ | 多子句AND组合 | - |
-| `dist_points` | list | ❌ | 距离分段给分（仅RECENT/DIST/NEAR使用） | - |
+| `show_reason` | bool | [可选] | 是否纳入"理由"列表 | `true` |
+| `as` | str | [可选] | 分类标签：`"opportunity"`(机会) / `"highlight"`(高亮) / `"drawback"`(缺点) / `"auto"`(自动) | `"auto"` |
+| `gate` / `trigger` / `require` | str/dict/list | [可选] | 前置门槛条件（三个字段功能相同，只是字段名不同） | - |
+| `clauses` | list | [可选] | 多子句AND组合（可替代when字段） | - |
+| `dist_points` | list | [可选] | 距离分段给分（仅RECENT/DIST/NEAR使用） | - |
+
+**前置门槛字段说明**：
+- `gate`、`trigger`、`require` 三个字段功能完全相同，只是字段名不同
+- 支持三种格式：字符串表达式、子规则对象、子句数组
+- 可根据个人习惯选择使用哪个字段名
 
 ---
 
@@ -64,13 +81,22 @@
 
 ### 3.1 基本口径
 
-| 口径 | 说明 | 示例场景 |
-|---|---|---|
-| `LAST` | 仅看窗口内**最后一根**是否满足 | 今日是否突破 |
-| `ANY` | 窗口内**任意一根**满足即命中 | 近期是否有涨停 |
-| `ALL` | 窗口内**全部**满足才命中 | 连续上涨 |
-| `COUNT>=k` | 窗口内满足的**次数**≥k | 近20天涨停≥3次 |
-| `CONSEC>=m` | 窗口内存在**连续m天**为True | 连续3天上涨 |
+| 口径 | 说明 | 示例场景 | 格式示例 |
+|---|---|---|---|
+| `LAST` | 仅看窗口内**最后一根**是否满足 | 今日是否突破 | `"LAST"` |
+| `ANY` | 窗口内**任意一根**满足即命中 | 近期是否有涨停 | `"ANY"` |
+| `ALL` | 窗口内**全部**满足才命中 | 连续上涨 | `"ALL"` |
+| `EACH` | 窗口内**每一根**满足都加分 | 每根阳线都加分 | `"EACH"` |
+| `COUNT>=k` | 窗口内满足的**次数**≥k | 近20天涨停≥3次 | `"COUNT>=3"` |
+| `CONSEC>=m` | 窗口内存在**连续m天**为True | 连续3天上涨 | `"CONSEC>=3"` |
+| `RECENT` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"RECENT"`（需配合dist_points） |
+| `DIST` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"DIST"`（需配合dist_points） |
+| `NEAR` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"NEAR"`（需配合dist_points） |
+
+**格式说明**：
+- `COUNT>=k` 格式：k 为正整数，例如 `"COUNT>=3"` 表示至少满足3次
+- `CONSEC>=m` 格式：m 为正整数，例如 `"CONSEC>=3"` 表示至少连续3天满足
+- `RECENT`/`DIST`/`NEAR` 需要配合 `dist_points` 字段使用，根据距离分段给分
 
 ### 3.2 连续子窗
 
@@ -79,7 +105,7 @@
 | `ANY_n` | 长度为n的任意**连续子窗**中至少1天为True | 近10天中任意5天有1天满足 |
 | `ALL_n` | 长度为n的任意**连续子窗**中**每天**都为True | 近10天中任意5天都满足 |
 
-> 💡 **注意**：以上口径均对 `when` 的布尔序列进行统计，缺失值会被处理为 `False`。
+**注意**：以上口径均对 `when` 的布尔序列进行统计，缺失值会被处理为 `False`。
 
 ### 3.3 最近命中打分 (RECENT/DIST/NEAR)
 
@@ -91,25 +117,33 @@
 #### dist_points 配置格式
 
 ```json
-// 方式1：区间三元组
-"dist_points": [[0,5,+20], [6,10,+10], [11,20,+5]]
+// 方式1：区间三元组 [min, max, points]
+"dist_points": [[0,5,20], [6,10,10], [11,20,5]]
 
-// 方式2：显式对象
+// 方式2：显式对象 {min, max, points}
 "dist_points": [
-  {"min":0, "max":5, "points":+20},
-  {"min":6, "max":10, "points":+10},
-  {"min":11, "max":20, "points":+5}
+  {"min":0, "max":5, "points":20},
+  {"min":6, "max":10, "points":10},
+  {"min":11, "max":20, "points":5}
 ]
 ```
+
+**格式说明**：
+- 方式1：每个元素为 `[min, max, points]` 三元组，min和max为距离范围，points为给分
+- 方式2：每个元素为 `{min, max, points}` 对象，字段含义相同
+- min和max：最近一次命中的距离范围（K线数）
+- points：该距离范围内的给分（正数为加分，负数为减分）
 
 #### 实际示例
 
 ```json
 {
   "name": "金叉越近分越高",
+  "timeframe": "D",
+  "score_windows": 25,
   "scope": "RECENT",
   "when": "CROSS(MA(C,5), MA(C,20))",
-  "dist_points": [[0,5,+30], [6,20,+20], [21,40,+10]],
+  "dist_points": [[0,5,30], [6,20,20], [21,40,10]],
   "explain": "5日线上穿20日线，越近给分越高"
 }
 ```
@@ -122,10 +156,11 @@
 
 ### 使用规则
 
-1. **子句结构**：每个子句都是完整的规则对象，需要 `timeframe`、`window`、`when`、`scope`
-2. **周期一致**：所有子句的 `timeframe` 和 `window` 必须一致
+1. **子句结构**：每个子句都是完整的规则对象，需要 `timeframe`、`score_windows`、`when`、`scope`
+2. **周期一致**：所有子句的 `timeframe` 和 `score_windows` 必须一致
 3. **逻辑合并**：系统会逐K进行AND合并，再根据 `scope` 统计命中
-4. **门槛支持**：可与 `gate` 联用，先判断门槛，再判断合并后的主体
+4. **门槛支持**：可与 `gate`/`trigger`/`require` 联用，先判断门槛，再判断合并后的主体
+5. **替代when**：使用 `clauses` 时，外层规则不需要 `when` 字段
 
 ### 实际示例
 
@@ -135,29 +170,30 @@
   "clauses": [
     {
       "timeframe": "D",
-      "window": 40,
+      "score_windows": 40,
       "when": "C > HHV(H,40) AND V > 1.5*MA(V,20)",
       "scope": "ANY",
       "explain": "日线放量突破40日高点"
     },
     {
       "timeframe": "W", 
-      "window": 20,
+      "score_windows": 20,
       "when": "MA(C,5) > MA(C,10)",
       "scope": "LAST",
       "explain": "周线5日线上穿10日线"
     }
   ],
-  "points": +8,
+  "points": 8,
   "explain": "日线放量突破且周线均线多头排列"
 }
 ```
 
 ### 注意事项
 
-- ❌ **不支持**在同一规则中混用不同的 `timeframe` 或 `window`
-- ✅ **支持**与 `gate` 联用，实现更复杂的条件判断
-- ✅ **支持**每个子句独立的 `explain` 说明
+- **[不支持]** 在同一规则中混用不同的 `timeframe` 或 `score_windows`
+- **[支持]** 与 `gate`/`trigger`/`require` 联用，实现更复杂的条件判断
+- **[支持]** 每个子句独立的 `explain` 说明
+- **[重要]** 使用 `clauses` 时，外层规则不需要 `when` 字段
 
 ---
 
@@ -263,7 +299,7 @@ shift=0             // 当前日
 shift=1             // 昨日
 ```
 
-> 💡 **提示**：标签函数会在当前滚动窗口内对齐索引，并可读取通过 `as` 分类计算出的 `CUSTOM_TAGS`。
+**提示**：标签函数会在当前滚动窗口内对齐索引，并可读取通过 `as` 分类计算出的 `CUSTOM_TAGS`。
 
 ---
 
@@ -271,10 +307,14 @@ shift=1             // 昨日
 
 前置门槛用于在判断主体规则之前，先检查是否满足特定条件。
 
+### 字段说明
+
+`gate`、`trigger`、`require` 三个字段功能完全相同，只是字段名不同。可以根据个人习惯选择使用哪个字段名。
+
 ### 使用规则
 
 1. **写法灵活**：可以是字符串表达式、子规则对象或子句数组
-2. **继承机制**：未指定 `timeframe/window/scope` 时，会继承外层设置
+2. **继承机制**：未指定 `timeframe/score_windows/scope` 时，会继承外层设置
 3. **默认scope**：门槛的 `scope` 默认为 `"LAST"`（只看最后一根K线）
 4. **执行流程**：先判断门槛，通过后再判断主体规则
 
@@ -283,29 +323,38 @@ shift=1             // 昨日
 ```json
 // 方式1：字符串表达式
 {
+  "timeframe": "D",
+  "score_windows": 20,
   "when": "C > MA(C,20)",
   "gate": "V > MA(V,20)",        // 前置条件：放量
-  "points": +10
+  "scope": "LAST",
+  "points": 10
 }
 
 // 方式2：子规则对象
 {
+  "timeframe": "D",
+  "score_windows": 20,
   "when": "C > HHV(H,20)",
   "gate": {
     "when": "O > MA(C,20)",
     "scope": "LAST"
   },
-  "points": +15
+  "scope": "LAST",
+  "points": 15
 }
 
 // 方式3：子句数组
 {
+  "timeframe": "D",
+  "score_windows": 20,
   "when": "CROSS(MA(C,5), MA(C,20))",
   "gate": [
     {"when": "V > MA(V,20)", "scope": "ANY"},
     {"when": "C > MA(C,60)", "scope": "LAST"}
   ],
-  "points": +20
+  "scope": "LAST",
+  "points": 20
 }
 ```
 
@@ -315,7 +364,7 @@ shift=1             // 昨日
 {
   "name": "破趋势",
   "timeframe": "D",
-  "window": 2,
+  "score_windows": 2,
   "when": "C <= duokong_long",
   "gate": "O > duokong_long",     // 仅当当日高于趋势时，才认可"跌破"
   "scope": "LAST",
@@ -324,11 +373,27 @@ shift=1             // 昨日
 }
 ```
 
+### 使用trigger或require字段
+
+```json
+{
+  "name": "放量突破确认",
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "C > HHV(H,20)",
+  "trigger": "V > 2*MA(V,20)",    // 使用trigger字段（功能与gate相同）
+  "scope": "LAST",
+  "points": 20,
+  "explain": "放量突破20日高点"
+}
+```
+
 ### 注意事项
 
-- ✅ **门槛通过**：主体规则才会被评估和给分
-- ❌ **门槛失败**：主体规则直接跳过，不加分
-- 🔄 **继承机制**：门槛会继承外层的 `timeframe` 和 `window` 设置
+- **[支持]** 门槛通过：主体规则才会被评估和给分
+- **[不支持]** 门槛失败：主体规则直接跳过，不加分
+- **[继承机制]** 门槛会继承外层的 `timeframe` 和 `score_windows` 设置
+- **[提示]** 字段选择：`gate`、`trigger`、`require` 功能相同，可任意选择
 
 ---
 
@@ -341,10 +406,10 @@ shift=1             // 昨日
 {
   "name": "三连阳",
   "timeframe": "D",
-  "window": 20,
+  "score_windows": 20,
   "when": "C > MA(C,20)",
   "scope": "CONSEC>=3",
-  "points": +4,
+  "points": 4,
   "explain": "连续3天收盘站上MA20"
 }
 ```
@@ -354,10 +419,10 @@ shift=1             // 昨日
 {
   "name": "放量突破",
   "timeframe": "D", 
-  "window": 20,
+  "score_windows": 20,
   "when": "C > HHV(H,20) AND V > 1.5*MA(V,20)",
   "scope": "LAST",
-  "points": +15,
+  "points": 15,
   "explain": "放量突破20日高点"
 }
 ```
@@ -367,11 +432,24 @@ shift=1             // 昨日
 {
   "name": "均线金叉",
   "timeframe": "D",
-  "window": 25,
+  "score_windows": 25,
   "when": "CROSS(MA(C,5), MA(C,20))",
   "scope": "LAST",
-  "points": +10,
+  "points": 10,
   "explain": "5日线上穿20日线"
+}
+```
+
+#### COUNT格式示例
+```json
+{
+  "name": "近20天涨停≥3次",
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "C >= REF(C,1) * 1.095",
+  "scope": "COUNT>=3",
+  "points": 20,
+  "explain": "近20天内至少3次涨停"
 }
 ```
 
@@ -384,18 +462,18 @@ shift=1             // 昨日
   "clauses": [
     {
       "timeframe": "D",
-      "window": 40,
+      "score_windows": 40,
       "when": "C > HHV(H,40) AND V > 1.5*MA(V,20)",
       "scope": "ANY"
     },
     {
       "timeframe": "W",
-      "window": 20, 
+      "score_windows": 20, 
       "when": "MA(C,5) > MA(C,10)",
       "scope": "LAST"
     }
   ],
-  "points": +8,
+  "points": 8,
   "explain": "日线放量突破且周线均线多头"
 }
 ```
@@ -405,7 +483,7 @@ shift=1             // 昨日
 {
   "name": "金叉越近分越高",
   "timeframe": "D",
-  "window": 25,
+  "score_windows": 25,
   "when": "CROSS(MA(C,5), MA(C,20))",
   "scope": "RECENT",
   "dist_points": [[0,5,30], [6,20,20], [21,40,10]],
@@ -413,17 +491,31 @@ shift=1             // 昨日
 }
 ```
 
-#### 前置门槛
+#### 前置门槛（使用gate）
 ```json
 {
   "name": "放量突破确认",
   "timeframe": "D",
-  "window": 20,
+  "score_windows": 20,
   "when": "C > HHV(H,20)",
   "gate": "V > 2*MA(V,20)",        // 前置条件：放量2倍以上
   "scope": "LAST",
-  "points": +20,
+  "points": 20,
   "explain": "放量突破20日高点"
+}
+```
+
+#### 前置门槛（使用trigger）
+```json
+{
+  "name": "突破确认",
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "C > MA(C,20)",
+  "trigger": "V > MA(V,20)",       // 使用trigger字段（功能与gate相同）
+  "scope": "LAST",
+  "points": 15,
+  "explain": "放量站上20日均线"
 }
 ```
 
@@ -434,10 +526,10 @@ shift=1             // 昨日
 {
   "name": "日内加权",
   "timeframe": "D",
-  "window": 10,
+  "score_windows": 10,
   "when": "C > O",                  // 阳线
   "scope": "EACH",                  // 每个阳线都加分
-  "points": +2,
+  "points": 2,
   "explain": "每根阳线加2分"
 }
 ```
@@ -447,10 +539,10 @@ shift=1             // 昨日
 {
   "name": "机会标签联动",
   "timeframe": "D",
-  "window": 20,
+  "score_windows": 20,
   "when": "ANY_TAG('突破|涨停', shift=0) AND C > MA(C,20)",
   "scope": "ANY",
-  "points": +15,
+  "points": 15,
   "as": "opportunity",
   "explain": "有突破或涨停标签且站上20日线"
 }
@@ -460,33 +552,40 @@ shift=1             // 昨日
 
 ## 8. 最佳实践
 
-### ✅ 推荐做法
+### 推荐做法
 
-1. **合理设置窗口**：根据策略特点选择合适的 `window` 大小
+1. **合理设置窗口**：根据策略特点选择合适的 `score_windows` 大小（通常5-100）
 2. **使用说明文字**：为每个规则添加清晰的 `explain` 说明
 3. **分类标签**：使用 `as` 字段对规则进行分类管理
 4. **安全除法**：使用 `SAFE_DIV` 避免除零错误
-5. **前置门槛**：复杂条件使用 `gate` 进行分层判断
+5. **前置门槛**：复杂条件使用 `gate`/`trigger`/`require` 进行分层判断
+6. **使用新字段**：使用 `score_windows` 而不是已废弃的 `window` 字段
+7. **使用规则编辑器**：优先使用可视化编辑器创建规则，减少手写错误
 
-### ❌ 避免事项
+### 避免事项
 
-1. **混用周期**：多子句中不要混用不同的 `timeframe` 或 `window`
+1. **混用周期**：多子句中不要混用不同的 `timeframe` 或 `score_windows`
 2. **过度复杂**：避免过于复杂的表达式，影响可读性
 3. **硬编码数值**：尽量使用参数化的指标计算
 4. **忽略异常**：注意处理数据缺失和异常值
+5. **使用废弃字段**：避免使用已废弃的 `window` 字段，应使用 `score_windows`
+6. **缺少验证**：创建规则后应使用语法检查器验证配置正确性
 
-### 🔧 调试技巧
+### 调试技巧
 
 1. **分步测试**：复杂规则可以拆分成多个简单规则测试
 2. **查看日志**：利用系统日志了解规则执行情况
 3. **验证数据**：确保使用的指标列在数据中存在
 4. **测试边界**：测试规则在边界条件下的表现
+5. **使用工具**：利用规则编辑器的验证和解释功能
 
-## 8. 模拟策略
+---
+
+## 9. 模拟策略
 
 模拟策略用于生成"明日"的虚拟K线数据，支持多种价格模式和成交量模式。
 
-### 8.1 价格模式 (mode)
+### 9.1 价格模式 (mode)
 
 | 模式 | 说明 | 开盘价 | 收盘价 | 适用场景 |
 |---|---|---|---|---|
@@ -510,7 +609,7 @@ shift=1             // 昨日
 }
 ```
 
-### 8.2 高低点生成 (hl_mode)
+### 9.2 高低点生成 (hl_mode)
 
 | 模式 | 说明 | 参数 | 适用场景 |
 |---|---|---|---|
@@ -528,7 +627,7 @@ shift=1             // 昨日
 }
 ```
 
-### 8.3 成交量模式 (vol_mode)
+### 9.3 成交量模式 (vol_mode)
 
 | 模式 | 说明 | 参数 | 计算公式 |
 |---|---|---|---|
@@ -545,7 +644,7 @@ shift=1             // 昨日
 }
 ```
 
-### 8.4 其他参数
+### 9.4 其他参数
 
 ```json
 {
@@ -558,7 +657,7 @@ shift=1             // 昨日
 }
 ```
 
-### 8.5 完整示例
+### 9.5 完整示例
 
 ```json
 {
@@ -585,11 +684,13 @@ shift=1             // 昨日
 - 成交量：昨量×1.5倍
 - 约束：收盘≥开盘，H/L包住O/C
 
-## 9. 持仓策略
+---
+
+## 10. 持仓策略
 
 持仓策略用于判断已持有股票的买卖时机，支持止损、止盈、加仓等操作。
 
-### 9.1 可用变量
+### 10.1 可用变量
 
 #### 价格成交量
 | 变量 | 说明 | 示例 |
@@ -609,9 +710,9 @@ shift=1             // 昨日
 | `ENTRY_PRICE` | 买入价格 | 用户输入或策略取价 |
 | `UNREAL_PNL` | 浮盈比例 | `(CLOSE-ENTRY_PRICE)/ENTRY_PRICE` |
 
-> 💡 **虚拟日支持**：勾选"基于明日虚拟日检查"时，会先合成明日K线再判定
+**虚拟日支持**：勾选"基于明日虚拟日检查"时，会先合成明日K线再判定
 
-### 9.2 表达式语法
+### 10.2 表达式语法
 
 支持TDX风格的布尔表达式和多语句：
 
@@ -625,16 +726,16 @@ MA20 := MA(CLOSE,20);
 SIG := CROSS(MA5, MA20) AND V > MA(V,20);
 ```
 
-### 9.3 指标重算
+### 10.3 指标重算
 
 在UI中可选择指标重算方式：
 - **全部重算**：重算所有已注册指标
 - **自选重算**：只重算指定的指标
 - **不重算**：只使用历史基础列
 
-> 💡 **建议**：在表达式中现场计算指标，避免依赖列数据
+**建议**：在表达式中现场计算指标，避免依赖列数据
 
-### 9.4 策略配置示例
+### 10.4 策略配置示例
 
 ```json
 POSITION_POLICIES = [
@@ -661,7 +762,7 @@ POSITION_POLICIES = [
 ]
 ```
 
-### 9.5 买点来源
+### 10.5 买点来源
 
 支持三种买点设置方式：
 
@@ -669,7 +770,7 @@ POSITION_POLICIES = [
 2. **策略取价**：从 `OPPORTUNITY_POLICIES` 中获取
 3. **手动输入**：用户直接指定价格
 
-### 9.6 虚拟日场景
+### 10.6 虚拟日场景
 
 虚拟日场景使用与模拟策略相同的 `Scenario` 字段：
 
@@ -687,7 +788,7 @@ POSITION_POLICIES = [
 }
 ```
 
-### 9.7 输出结果
+### 10.7 输出结果
 
 系统会输出以下信息：
 - `name`：策略名称
@@ -700,14 +801,128 @@ POSITION_POLICIES = [
 
 ---
 
-## 📚 总结
+---
+
+## 11. 规则编辑器工具
+
+系统提供了可视化的规则编辑器工具（在 `score_ui.py` 的"规则编辑辅助工具"标签页），可以：
+
+### 11.1 功能特性
+
+- **可视化配置**：通过界面配置规则，无需手写JSON
+- **策略类型支持**：支持排名、筛选、模拟、持仓、买点五种策略类型
+- **字段验证**：自动验证字段类型和必填字段
+- **表达式检查**：检查TDX表达式的语法正确性
+- **配置生成**：自动生成符合规范的JSON配置
+- **规则解释**：自动解释规则逻辑和数据需求
+
+### 11.2 支持的字段
+
+#### 排名策略 (ranking)
+- 基础字段：`name`, `timeframe`, `score_windows`, `scope`, `points`, `explain`
+- 高级字段：`show_reason`, `as`, `gate`/`trigger`/`require`, `clauses`, `dist_points`
+
+#### 筛选策略 (filter)
+- 基础字段：`name`, `timeframe`, `score_windows`, `scope`, `reason`, `hard_penalty`
+- 高级字段：`gate`/`trigger`/`require`, `clauses`
+
+#### 模拟策略 (prediction)
+- 字段：`name`, `check`, `scenario`
+
+#### 持仓策略 (position)
+- 字段：`name`, `when`, `explain`
+
+#### 买点策略 (opportunity)
+- 字段：`name`, `when`, `explain`
+
+### 11.3 使用建议
+
+1. **使用规则编辑器**：优先使用可视化编辑器创建规则，减少手写错误
+2. **验证规则**：使用"验证规则"功能检查配置正确性
+3. **查看解释**：利用"规则解释"功能理解规则逻辑
+4. **导出配置**：生成配置后可直接复制到策略文件中使用
+
+---
+
+## 12. 策略语法检查器
+
+策略语法检查器用于自动检查策略文件的语法错误、字段有效性、表达式正确性等。
+
+### 12.1 功能特性
+
+- **自动文件定位**：自动扫描并定位策略文件（strategies_repo.py）
+- **Python语法检查**：验证Python文件语法正确性
+- **字段验证**：检查必填字段和字段类型
+- **表达式检查**：检查TDX表达式的语法正确性
+- **指标检查**：验证指标依赖关系
+- **缺失检查**：检查缺失的数据列和指标
+
+### 12.2 支持的策略类型
+
+- 排名策略 (ranking)
+- 筛选策略 (filter)
+- 模拟策略 (prediction)
+- 持仓策略 (position)
+- 买点策略 (opportunity)
+
+### 12.3 检查内容
+
+- Python文件语法正确性
+- 策略列表结构正确性（RANKING_RULES, FILTER_RULES等）
+- 每个规则的字段和表达式
+- 必填字段完整性（when/check字段）
+- 字段类型正确性（score_windows, points等）
+- 表达式语法正确性
+- 支持的函数和变量
+- 缺失的数据列和指标
+- scope格式验证（COUNT>=k, CONSEC>=m等）
+- dist_points格式验证
+- gate/trigger/require字段验证
+
+### 12.4 验证结果
+
+检查器会返回以下信息：
+
+- **验证状态**：通过或失败
+- **错误信息**：必填字段缺失、字段类型错误、表达式错误等
+- **警告信息**：使用废弃字段、字段值异常等
+- **改进建议**：添加name/explain字段、使用SAFE_DIV等
+- **缺失资源**：缺失的数据列和指标列表
+- **语法问题**：表达式语法问题列表
+
+### 12.5 使用建议
+
+1. **定期检查**：修改策略文件后应使用检查器验证
+2. **查看警告**：注意警告信息，及时修复潜在问题
+3. **遵循建议**：参考改进建议优化规则配置
+4. **检查缺失**：确保使用的指标和数据列存在
+
+---
+
+## 总结
 
 本手册涵盖了量化策略规则编辑的完整流程：
 
 1. **基础规则**：从最小模板到复杂组合
-2. **表达式语法**：TDX兼容的函数和操作符
-3. **命中口径**：多种统计和判断方式
-4. **模拟策略**：虚拟K线生成
-5. **持仓策略**：买卖时机判断
+2. **字段详解**：所有支持字段的详细说明
+3. **命中口径**：多种统计和判断方式（包括COUNT和CONSEC格式）
+4. **多子句组合**：跨周期AND组合的复杂规则
+5. **表达式语法**：TDX兼容的函数和操作符
+6. **前置门槛**：gate/trigger/require三种字段支持
+7. **实用示例**：各种场景的配置示例
+8. **最佳实践**：推荐做法和避免事项
+9. **模拟策略**：虚拟K线生成
+10. **持仓策略**：买卖时机判断
+11. **规则编辑器**：可视化配置工具
+12. **语法检查器**：自动验证策略配置
+
+### 重要更新
+
+- **[重要]** 字段更新：`window` 字段已废弃，请使用 `score_windows` 字段
+- **[新增]** 新字段支持：`gate`/`trigger`/`require` 三个字段功能相同，可根据习惯选择
+- **[新增]** scope格式：支持 `COUNT>=k` 和 `CONSEC>=m` 格式，k和m为正整数
+- **[新增]** 工具支持：提供可视化规则编辑器工具和策略语法检查器
+- **[完善]** dist_points：支持区间三元组和显式对象两种格式
+- **[完善]** clauses：使用clauses时可省略外层when字段
 
 通过合理使用这些功能，可以构建出强大的量化交易策略系统。
